--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             </section>
         </div>
     </div>
-
+    <script src="controller/calcController.js"></script>
+    <script src="js/calculator.js"></script>
 </body>
 </html>
