--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
                     <button type="button" class="btn btn-others col-sm">CE</button>
                     <button type="button" class="btn btn-others col-sm">C</button>
                     <button type="button" class="btn btn-others col-sm">←</button>
-                    <button type="button" class="btn btn-others col-sm">÷</button>
+                    <button type="button" class="btn btn-others col-sm">/</button>
                 </div>
                 <div class="row">
                     <button type="button" class="btn btn-number col-sm">7</button>
                     <button type="button" class="btn btn-number col-sm">8</button>
                     <button type="button" class="btn btn-number col-sm">9</button>
-                    <button type="button" class="btn btn-others col-sm">X</button>
+                    <button type="button" class="btn btn-others col-sm">x</button>
                 </div>
                 <div class="row">
                     <button type="button" class="btn btn-number col-sm">4</button>
@@ -150,7 +150,7 @@
                     <button type="button" class="btn btn-others col-sm">+</button>
                 </div>
                 <div class="row">
-                    <button type="button" class="btn btn-others col-sm">±</button>
+                    <button type="button" class="btn btn-others col-sm">?</button>
                     <button type="button" class="btn btn-number col-sm">0</button>
                     <button type="button" class="btn btn-others col-sm">,</button>
                     <button type="button" class="btn btn-others col-sm">=</button>
