--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <meta name="author" content="Hcode Treinamentos">
-    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Calculadora</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -119,7 +119,7 @@
                 </div>
             </header>
             <section class="container">
-                <div class="row">
+                <div class="row" id="root">
                     <button type="button" class="btn btn-others col-sm">%</button>
                     <button type="button" class="btn btn-others col-sm">√</button>
                     <button type="button" class="btn btn-others col-sm">x²</button>
@@ -150,7 +150,7 @@
                     <button type="button" class="btn btn-others col-sm">+</button>
                 </div>
                 <div class="row">
-                    <button type="button" class="btn btn-others col-sm">?</button>
+                    <button type="button" class="btn btn-others col-sm">SOM</button>
                     <button type="button" class="btn btn-number col-sm">0</button>
                     <button type="button" class="btn btn-others col-sm">,</button>
                     <button type="button" class="btn btn-others col-sm">=</button>
