--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <button type="button" class="btn btn-others col-sm">+</button>
                 </div>
                 <div class="row">
-                    <button type="button" class="btn btn-others col-sm">SOM</button>
+                    <button type="button" class="btn btn-others col-sm">±</button>
                     <button type="button" class="btn btn-number col-sm">0</button>
                     <button type="button" class="btn btn-others col-sm">,</button>
                     <button type="button" class="btn btn-others col-sm">=</button>
